[package]
name = "online_status"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
clap = { version = "4.5.17", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
axum = "0.7.5"
pgp = "0.13.2"
hex = "0.4.3"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"

[features]
default = []
